objects/Organization_Details__c.object
<CustomObject>
    <fields>
        <fullName>MasterOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MasterOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgURL__c</fullName>
        <label>orgURL</label>
        <type>Url</type>
    </fields>
    <label>Organization_Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>MasterOrg__c</columns>
        <columns>orgURL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrgID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>